<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_program">ProgramActivity</string>
    
    <string name="vivo_texto">Ahora en Vivo:</string>
    <string name="vivo_seguiente_texto">Vidas</string>
    <string name="vod_texto">VER VOD</string>
    <string name="proximo_texto">Próximo Programa: El Angelus</string>
    <string name="destacado_texto">DESTACADOS</string>
    
    <string name="program_title">Esto es Guerra</string>
    <string name="program_description">Programa de entretenimiento.</string>
	
	<string name="horario_texto" >HORARIO: </string>
	<string name="clasificacion_texto">CLASIFICACIÓN: </string>
	<string name="genero_texto">GÉNERO: </string>
	<string name="grupo_texto">GRUPO: </string>
	
	<string name="horario_texto_detalle">18:30-20:00</string>    
	<string name="clasificacion_texto_detalle">18+</string>
	<string name="genero_texto_detalle">Entretenimiento</string>
	<string name="grupo_texto_detalle">Entretenimiento</string>
    
    
</resources>
