<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_program" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_program" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/sample_8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_bottom_program"
                android:paddingLeft="@dimen/padding_left_program"
                android:paddingRight="@dimen/padding_right_program"
                android:paddingTop="@dimen/padding_top_program" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/program_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/title_program" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_bottom_description"
                    android:layout_marginTop="@dimen/margin_top_description"
                    android:background="@color/raya"
                    android:orientation="vertical" >

                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/program_description"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/description_program" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_bottom_description"
                    android:layout_marginTop="@dimen/margin_top_description"
                    android:background="@color/raya"
                    android:orientation="vertical" >

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_bottom_tipo"
                        android:layout_marginRight="@dimen/margin_right_tipo"
                        android:text="@string/horario_texto"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/tipo_program" />

                    <TextView
                        android:id="@+id/TextView08"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/horario_texto_detalle"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/tipo_program_detalle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_bottom_tipo"
                        android:layout_marginRight="@dimen/margin_right_tipo"
                        android:text="@string/clasificacion_texto"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/tipo_program" />

                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clasificacion_texto_detalle"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/tipo_program_detalle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_bottom_tipo"
                        android:layout_marginRight="@dimen/margin_right_tipo"
                        android:text="@string/genero_texto"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/tipo_program" />

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genero_texto_detalle"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/tipo_program_detalle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_bottom_tipo"
                        android:layout_marginRight="@dimen/margin_right_tipo"
                        android:text="@string/grupo_texto"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/tipo_program" />

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grupo_texto_detalle"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/tipo_program_detalle" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
